Ensure sidebar doesn't get too big

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -158,6 +158,7 @@ body {
     div.sidebar {
         height: auto !important;
         min-width: 250px;
+        max-width: 300px;
     }
 
     /* Less of an indent for TOC items */
